Change table setting
Print just day of weekend. Date is not useful to our project.

--- a/source/BootStrap/addTableHomepage.html
+++ b/source/BootStrap/addTableHomepage.html
@@ -143,7 +143,7 @@
                         right: ''
                     },
                     timeFormat: 'H시(:mm)',
-                    columnFormat: 'ddd M/D',
+                    columnFormat: 'ddd', //요일만 출력(시간표이기 때문에 날짜가 필요없음)
                     axisFormat: 'a h시',
                     allDaySlot: false,
                     defaultView: 'agendaWeek',
