--- a/source/BootStrap/addTableHomepage.html
+++ b/source/BootStrap/addTableHomepage.html
@@ -24,13 +24,12 @@
         .choiceSubject {
             width: 100%;
             height: 600px;
-            border: 3px solid #747474;
-            background: #A6A6A6;
+            background: #EAEAEA;
         }
         .printTimeTable{
             width: 100%;
             height: 600px;
-            /*border: 5px solid black;*/
+            border: 5px solid black;
         }
         .choiceSubject table {
             width: 100%;
@@ -47,40 +46,47 @@
     <div class="row" style="margin:20px">
         <div class="col-xs-4">
             <div class="choiceSubject">
-                <table>
-                    <tr>
-            
-                        <td align="center">
-                            <input type="text" value="과목 검색" />
-                            <button type="button" class="btn btn-default btn-sm" onclick="printSubject()">검색</button>
+                <table class="table table-bordered table-condensed">
+                    <tr align="center">
+                        <td class="center">
+                            <form class="navbar-form navbar-left" role="search">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" placeholder="과목 검색">
+                                </div>
+                                <button type="button" class="btn btn-primary">검색</button>
+                            </form>
                         </td>
                     </tr>
                     <tr>
                         <td align="center">
-                            <input type="radio" name="grade" value="1" />1학년
-                            <input type="radio" name="grade" value="2" />2학년
-                            <input type="radio" name="grade" value="3" />3학년
-                            <input type="radio" name="grade" value="4" />4학년
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center">
-                            학과별 과목
-                            <select>
-                                <option value="선택하세요.">선택하세요</option>
-
+                            <select class="form-control">
+                                <option>학년별 과목</option>
+                                <option>1학년</option>
+                                <option>2학년</option>
+                                <option>3학년</option>
+                                <option>4학년</option>
                             </select>
-                            <br />
                         </td>
                     </tr>
                     <tr>
                         <td align="center">
-                            교양분류별 과목
-                            <select>
-                                <option value="선택하세요.">선택하세요</option>
-                                <option value="이산수학">영화듣기</option>
+                            <select class="form-control">
+                                <option>학과별 과목</option>
+                                <option>컴퓨터공학부</option>
                             </select>
-                            <br />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td align="center">
+                            <select class="form-control">
+                                <option>교양분류별 과목</option>
+                                <option>문학·언어</option>
+                                <option>역사·철학</option>
+                                <option>정치·경제·사회·세계</option>
+                                <option>과학·기술·자연</option>
+                                <option>예·체능계</option>
+                                <option>인성교육</option>
+                            </select>
                         </td>
                     </tr>
                     <tr>
@@ -90,7 +96,7 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <input type="button" value="시간표 만들기" onclick="makeTimeTable()" />
+                            <input type="button" class="btn btn-primary btn-lg" value="시간표 만들기" onclick="makeTimeTable()" />
                     </tr>
 
                 </table>
