--- a/source/Server/index.html
+++ b/source/Server/index.html
@@ -52,7 +52,7 @@
                         <td class="center">
                             <form action="/sign" method="post" class="navbar-form navbar-left" role="search">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="input_subject" placeholder="과목 검색">
+                                    <input type="text" class="form-control" name="input_textbox" placeholder="과목 검색">
                                 </div>
                                 <button type="button" class="btn btn-primary">검색</button>
                             </form>
@@ -60,13 +60,15 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <select class="form-control">
-                                <option>학년별 과목</option>
-                                <option>1학년</option>
-                                <option>2학년</option>
-                                <option>3학년</option>
-                                <option>4학년</option>
-                            </select>
+                            <form action="/select" method="post" >
+                                <select  class="form-control" name= "selected_grade">
+                                    <option>학년별 과목</option>
+                                    <option>1학년</option>
+                                    <option>2학년</option>
+                                    <option>3학년</option>
+                                    <option>4학년</option>
+                                </select>
+                            </form>
                         </td>
                     </tr>
                     <tr>
@@ -100,27 +102,18 @@
                             <input type="button" class="btn btn-primary btn-lg" value="시간표 만들기" onclick="makeTimeTable()" />
                     </tr>
                 </table>
+                {% for subject in Classlist %}
                 <li class = "container_set" style="display: block;">
                     <div class="container_set_container">
                         <div class="setHead-container ">
                             <span class = "lectureAddButton">+</span>
                         </div>
                         <div class = "lecture_info_container">
-                            추가하세요
+                            {{ subject.subjectname }}
                         </div>
                     </div>
                 </li>       <!-- 강의 목록1... -->
-                <li class = "container_set" style="display: block;">        <!-- 강의 목록2... -->
-                    <div class="container_set_container">
-                        <div class="setHead-container ">
-                            <span class = "lectureAddButton">+</span>
-                        </div>
-                        <div class = "lecture_info_container">
-                            추가하세요
-                        </div>
-                    </div>
-                </li>
-
+                {% endfor %}
 
             </div>
         </div>
