for test add post method in '검색'

--- a/source/BootStrap/addTableHomepage.html
+++ b/source/BootStrap/addTableHomepage.html
@@ -54,9 +54,9 @@
                 <table class="table table-bordered table-condensed">
                     <tr align="center">
                         <td class="center">
-                            <form class="navbar-form navbar-left" role="search">
+                            <form action="/sign" method="post" class="navbar-form navbar-left" role="search">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="과목 검색">
+                                    <input type="text" class="form-control" name="input_textbox" placeholder="과목 검색">
                                 </div>
                                 <button type="button" class="btn btn-primary">검색</button>
                             </form>
