change '검색' button's type
change '검색' button's type to subject because button should do form's action

--- a/source/BootStrap/addTableHomepage.html
+++ b/source/BootStrap/addTableHomepage.html
@@ -58,7 +58,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="input_textbox" placeholder="과목 검색">
                                 </div>
-                                <button type="button" class="btn btn-primary">검색</button>
+                                <button type="subject" class="btn btn-primary">검색</button>
                             </form>
                         </td>
                     </tr>
